[gd_scene load_steps=75 format=2]

[ext_resource path="res://Character/Steve.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/dengmao.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/caodi.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/map/9023-1.png" type="Texture" id=4]
[ext_resource path="res://assets/map/9024-1.png" type="Texture" id=5]
[ext_resource path="res://assets/map/8985-1.png" type="Texture" id=6]
[ext_resource path="res://MUSIC/bajun(shu).ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/map/9009-1.png" type="Texture" id=14]
[ext_resource path="res://assets/map/9011-1.png" type="Texture" id=15]
[ext_resource path="res://assets/map/9010-1.png" type="Texture" id=16]
[ext_resource path="res://assets/map/12685-4.png" type="Texture" id=27]
[ext_resource path="res://assets/map/12685-14.png" type="Texture" id=28]
[ext_resource path="res://assets/map/12684-14.png" type="Texture" id=29]
[ext_resource path="res://assets/map/12684-15.png" type="Texture" id=30]
[ext_resource path="res://assets/map/12685-10.png" type="Texture" id=31]
[ext_resource path="res://assets/map/12684-9.png" type="Texture" id=32]
[ext_resource path="res://assets/map/12685-1.png" type="Texture" id=33]
[ext_resource path="res://assets/map/12685-8.png" type="Texture" id=34]
[ext_resource path="res://assets/map/12684-2.png" type="Texture" id=35]
[ext_resource path="res://assets/map/12685-3.png" type="Texture" id=36]
[ext_resource path="res://assets/map/12685-6.png" type="Texture" id=37]
[ext_resource path="res://assets/map/12684-8.png" type="Texture" id=38]
[ext_resource path="res://assets/map/12685-12.png" type="Texture" id=39]
[ext_resource path="res://assets/map/12684-7.png" type="Texture" id=40]
[ext_resource path="res://assets/map/12684-12.png" type="Texture" id=41]
[ext_resource path="res://assets/map/12685-5.png" type="Texture" id=42]
[ext_resource path="res://assets/map/12685-13.png" type="Texture" id=43]
[ext_resource path="res://assets/map/12684-3.png" type="Texture" id=44]
[ext_resource path="res://assets/map/12684-11.png" type="Texture" id=45]
[ext_resource path="res://assets/map/12684-13.png" type="Texture" id=46]
[ext_resource path="res://assets/map/12685-2.png" type="Texture" id=47]
[ext_resource path="res://assets/map/12685-9.png" type="Texture" id=48]
[ext_resource path="res://assets/map/12684-1.png" type="Texture" id=49]
[ext_resource path="res://assets/map/12684-6.png" type="Texture" id=50]
[ext_resource path="res://assets/map/12685-15.png" type="Texture" id=51]
[ext_resource path="res://assets/map/12684-10.png" type="Texture" id=52]
[ext_resource path="res://assets/map/12685-11.png" type="Texture" id=53]
[ext_resource path="res://assets/map/12684-5.png" type="Texture" id=54]
[ext_resource path="res://assets/map/12685-7.png" type="Texture" id=55]
[ext_resource path="res://assets/map/12684-4.png" type="Texture" id=56]
[ext_resource path="res://Level1.gd" type="Script" id=58]
[ext_resource path="res://assets/map/bajun/13311-1.png" type="Texture" id=59]
[ext_resource path="res://UserInterFace.tscn" type="PackedScene" id=60]
[ext_resource path="res://MUSIC/fmusic001.ogg" type="AudioStream" id=62]
[ext_resource path="res://assets/map/bajun/13312-1.png" type="Texture" id=63]
[ext_resource path="res://monster_spawner.gd" type="Script" id=64]
[ext_resource path="res://16898-1.png" type="Texture" id=66]
[ext_resource path="res://16899-1.png" type="Texture" id=68]
[ext_resource path="res://Skill.tscn" type="PackedScene" id=69]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 176, 64 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 336, 64 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 195.708, 64 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 70.463, 64 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 56.2872, 25.4355 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 272, 64 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 256, 9 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 192, 64 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 32, 216 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 32, 266.569 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 38.6841, 135.452 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 312, 8 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 256, 64 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 160 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 8, 160 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 8, 160 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8, 152 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 40, 16.5 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 35 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 50 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 32 ), ExtResource( 52 ), ExtResource( 45 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 47 ), ExtResource( 36 ), ExtResource( 27 ), ExtResource( 42 ), ExtResource( 37 ), ExtResource( 55 ), ExtResource( 34 ), ExtResource( 48 ), ExtResource( 31 ), ExtResource( 53 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 28 ), ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 40, 16.5 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 35 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 50 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 32 ), ExtResource( 52 ), ExtResource( 45 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 47 ), ExtResource( 36 ), ExtResource( 27 ), ExtResource( 42 ), ExtResource( 37 ), ExtResource( 55 ), ExtResource( 34 ), ExtResource( 48 ), ExtResource( 31 ), ExtResource( 53 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 28 ), ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=29]
script/source = "extends Node2D

signal monster_die

var snake = preload(\"res://Enemy//Snake.tscn\")
var xiaomihou = preload(\"res://Character/xiaomihou.tscn\")
var hongdiao = preload(\"res://Character/hongdiao.tscn\")

var e1

func _ready():
	monster_generation(24)
	pass

func monster_generation(num):
	yield(get_tree(), \"idle_frame\")
	
	for i in range(1, num+1):
		
		var s =\"2_\"+str(i)
		if get_node(s).monster == \"Snake\":
			e1 = snake.instance()
		elif get_node(s).monster == \"xiaomihou\":
			e1 = xiaomihou.instance()
		elif get_node(s).monster == \"hongdiao\":
			e1 = hongdiao.instance()
		e1.position = get_node(s).position
		e1.add_to_group(\"enemy\")
		e1.set_collision_layer_bit(1,1)
		e1.set_collision_layer_bit(0,0)
		e1.set_collision_mask_bit(0,0)
		e1.connect(\"monster_die\", self, \"_on_Spawner_monster_die\", [s])
		get_node(\"/root/Level1\").add_child(e1)
		$Tween.interpolate_property(e1, \"modulate\", Color(1, 1, 1, 0), Color(1, 1, 1, 1), 1,Tween.TRANS_LINEAR)
		
		$Tween.start()
#		yield($Tween,\"tween_completed\")

func monster_specify_place(num):
	var s = num
	if get_node(s).monster == \"Snake\":
		e1 = snake.instance()
	elif get_node(s).monster == \"xiaomihou\":
		e1 = xiaomihou.instance()
	elif get_node(s).monster == \"hongdiao\":
		e1 = hongdiao.instance()
	e1.position = get_node(s).position
	e1.add_to_group(\"enemy\")
	e1.set_collision_layer_bit(1,1)
	e1.set_collision_layer_bit(0,0)
	e1.set_collision_mask_bit(0,0)
	e1.connect(\"monster_die\", self, \"_on_Spawner_monster_die\", [s])
#
#	$Tween.interpolate_property(e1, \"modulate\", Color(1, 1, 1, 0), Color(1, 1, 1, 1), 1,Tween.TRANS_LINEAR)
##
#	$Tween.start()
#	yield($Tween,\"tween_completed\")
	
	get_node(\"/root/Level1\").add_child(e1)
	

func respawn():
	monster_generation((randi()%3)+1)


func _on_Spawner_monster_die(num):
	get_node(\"../Steve\").gain_money(100, 1)
	get_node(\"../Steve\").gain_experience(1)
	monster_specify_place(num)
	pass # Replace with function body.
"

[node name="Level1" type="Node2D"]
script = ExtResource( 58 )

[node name="UserInterFace" parent="." instance=ExtResource( 60 )]
unique_name_in_owner = true

[node name="Tile OneWay" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -2293758, 4, 0, -2228185, 6, 0, -1900554, 16, 0, -1900545, 15, 0, -1966080, 7, 0, -1966072, 16, 0, -1835028, 8, 0, -1835027, 0, 0, -1835019, 1, 0, -1835015, 0, 0, -1900544, 1, 0, -1900539, 0, 0, -1834991, 16, 0, -1834974, 15, 0, -1834970, 14, 0, -1834963, 16, 0, -1703947, 2, 0, -1769467, 2, 0, -1769462, 0, 0, -1769454, 0, 0, -1769446, 0, 0, -1769438, 1, 0, -1769433, 0, 0, -1769429, 7, 0, -1638361, 2, 0, -1507321, 6, 0, -1507318, 6, 0, -1441780, 4, 0, -1441740, 6, 0, -1441733, 6, 0, -1376195, 4, 0, -1179626, 13, 0, -1114106, 14, 0, -1114099, 14, 0, -1114073, 13, 0, -983043, 8, 0, -983042, 0, 0, -1048573, 7, 0, -1048570, 1, 0, -1048566, 0, 0, -1048558, 0, 0, -1048519, 17, 0, -983026, 1, 0, -983024, 8, 0, -983016, 0, 0, -983008, 0, 0, -982999, 0, 0, -982991, 1, 0, -982986, 0, 0, -982981, 0, 0, -982979, 7, 0, -982974, 8, 0, -917494, 2, 0, -917467, 1, 0, -851949, 2, 0, -851914, 2, 0, -786390, 2, 0, -262126, 3, 0, -131082, 10, 0, -65551, 8, 0, -65550, 0, 0, -65543, 1, 0, -65539, 0, 0, -131071, 7, 0, -131020, 0, 0, -131013, 1, 0, -131010, 0, 0, -131003, 8, 0, -65483, 11, 0, 65534, 2, 0, 38, 0, 0, 40, 7, 0, 46, 0, 0, 65580, 1, 0, 131124, 2, 0, 327689, 6, 0, 655368, 13, 0, 655392, 9, 0, 720900, 11, 0, 720901, 12, 0, 720905, 10, 0, 720906, 12, 0, 720926, 11, 0, 720928, 8, 0, 851959, 0, 0, 851967, 0, 0, 786439, 1, 0, 786444, 0, 0, 786452, 1, 0, 786457, 0, 0, 786464, 1, 0, 786468, 0, 0, 786474, 0, 0, 852026, 20, 0, 917515, 2, 0, 917536, 2, 0, 983099, 13, 0, 1114166, 0, 0, 1114168, 0, 0, 1114176, 0, 0, 1114183, 0, 0, 1114191, 12, 0, 1179712, 12, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2( 10, 0 )

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
show_behind_parent = true
scale = Vector2( 2, 2 )
motion_scale = Vector2( 0.2, 0.2 )
motion_offset = Vector2( 0, -40 )
motion_mirroring = Vector2( 800, 600 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/sky"]
z_index = 1
texture = ExtResource( 6 )
centered = false

[node name="cloud" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_offset = Vector2( 0, -120 )
motion_mirroring = Vector2( 2236.5, 774 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/cloud"]
position = Vector2( 448, -160 )
z_index = 1
texture = ExtResource( 5 )
centered = false

[node name="Sprite" type="Sprite" parent="ParallaxBackground/cloud"]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="mountain" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 32, 352 )
scale = Vector2( 1, 1.2 )
motion_scale = Vector2( 0.6, 0.6 )
motion_offset = Vector2( 0, -120 )
motion_mirroring = Vector2( 1185, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/mountain"]
texture = ExtResource( 14 )

[node name="mountain2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 640, 416 )
scale = Vector2( 1, 1.2 )
motion_scale = Vector2( 0.6, 0.6 )
motion_offset = Vector2( 0, -120 )
motion_mirroring = Vector2( 1543.5, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/mountain2"]
texture = ExtResource( 15 )

[node name="mountain3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 80, 384 )
scale = Vector2( 1, 1.2 )
motion_scale = Vector2( 0.6, 0.6 )
motion_offset = Vector2( 0, -120 )
motion_mirroring = Vector2( 1120, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/mountain3"]
position = Vector2( 0, -106.667 )
scale = Vector2( 1, 1.73059 )
texture = ExtResource( 16 )
centered = false

[node name="wall_floor" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D9" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1008, -384 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -48, 32 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 128, 480 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 800, 480 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D17" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2320, 640 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D19" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1789.89, 640.441 )
shape = SubResource( 7 )
one_way_collision = true

[node name="CollisionShape2D21" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1733.7, 594.743 )
shape = SubResource( 8 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1859.97, 551.674 )
shape = SubResource( 9 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1568, 96 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2000, -384 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D15" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1344, -768 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D16" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 800, -768 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D18" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -256, -848 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1456, -384 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 288, -424 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 272, -903 )
shape = SubResource( 11 )
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 752, -424 )
shape = SubResource( 12 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 464, -768 )
shape = SubResource( 13 )
one_way_collision = true

[node name="wall" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -232, 200 )
shape = SubResource( 14 )

[node name="wall2" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -400, -248 )
shape = SubResource( 14 )

[node name="wall3" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -400, -632 )
shape = SubResource( 14 )

[node name="wall4" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -552, -1088 )
shape = SubResource( 14 )

[node name="wall5" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( -552, -1480 )
shape = SubResource( 14 )

[node name="wall6" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2384, -240 )
shape = SubResource( 14 )

[node name="wall9" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2637.4, 316.89 )
shape = SubResource( 15 )

[node name="wall10" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2493.27, 13.5493 )
rotation = 1.5708
shape = SubResource( 16 )

[node name="wall7" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2384, -672 )
shape = SubResource( 14 )

[node name="wall8" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2384, -1104 )
shape = SubResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="wall_floor"]
position = Vector2( 32, 48 )
scale = Vector2( 0.980769, 0.9375 )
polygon = PoolVector2Array( 1800.07, 480.221, 1827.29, 507.273, 1825.25, 532.19, 1650.36, 532.19, 1649.68, 391.231, 1682.35, 401.91, 1723.18, 425.403, 1767.41, 453.168 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 2048, -32 )
shape = SubResource( 17 )
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="wall_floor"]
position = Vector2( 1392, 480 )
shape = SubResource( 18 )

[node name="Steve" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 2321.43, 520.416 )
z_index = 1

[node name="Timer" type="Timer" parent="Steve"]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="climb" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="climb"]
position = Vector2( 152, 120 )
shape = SubResource( 19 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="climb"]
position = Vector2( 216, -336 )
shape = SubResource( 20 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="climb"]
position = Vector2( 120, -760 )
shape = SubResource( 21 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="climb"]
position = Vector2( 1496, -704 )
shape = SubResource( 22 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="climb"]
position = Vector2( 2072, -296 )
shape = SubResource( 21 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="climb"]
position = Vector2( 1400, 152 )
shape = SubResource( 21 )

[node name="TransPort" type="Area2D" parent="."]
z_index = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransPort"]
position = Vector2( -136, 416.5 )
z_index = 2
shape = SubResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="TransPort"]
position = Vector2( -136, 352 )
frames = SubResource( 24 )
frame = 13
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="TransPort"]
position = Vector2( -136, 416 )
frames = SubResource( 25 )
frame = 8
playing = true

[node name="TransPort2" type="Area2D" parent="."]
position = Vector2( 2696, 152 )
z_index = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransPort2"]
position = Vector2( -136, 416.5 )
z_index = 2
shape = SubResource( 26 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="TransPort2"]
position = Vector2( -136, 352 )
frames = SubResource( 27 )
frame = 13
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="TransPort2"]
position = Vector2( -136, 416 )
frames = SubResource( 28 )
frame = 8
playing = true

[node name="Battle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 62 )

[node name="BattleTime" type="Timer" parent="."]

[node name="Spawner_Snake" type="Node2D" parent="."]
script = SubResource( 29 )

[node name="2_1" type="Position2D" parent="Spawner_Snake"]
position = Vector2( -272, -64 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_2" type="Position2D" parent="Spawner_Snake"]
position = Vector2( -80, -64 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_3" type="Position2D" parent="Spawner_Snake"]
position = Vector2( -184, -64 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_4" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1609.76, 378.885 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_5" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 25.5369, 385.234 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_6" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 187.452, 385.234 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_7" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 2108.21, 550.324 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_8" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1981.21, 550.324 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_9" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 2258.85, 548.273 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_10" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 2393.01, 546.063 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_11" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1911, -82 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="2_14" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1552, -9 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="2_15" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1471, -9 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="2_16" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 902, -519 )
script = ExtResource( 64 )
monster = "hongdiao"

[node name="2_17" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 632, -517 )
script = ExtResource( 64 )
monster = "hongdiao"

[node name="2_18" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 168, -517 )
script = ExtResource( 64 )
monster = "hongdiao"

[node name="2_19" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 658, -864 )
script = ExtResource( 64 )
monster = "hongdiao"

[node name="2_20" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 833, -864 )
script = ExtResource( 64 )
monster = "hongdiao"

[node name="2_21" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1392, -864 )
script = ExtResource( 64 )
monster = "Snake"

[node name="2_22" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1637, -487 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="2_23" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1271, -487 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="2_24" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 1505, -487 )
script = ExtResource( 64 )
monster = "hongdiao"

[node name="2_12" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 2027, -82 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="2_13" type="Position2D" parent="Spawner_Snake"]
position = Vector2( 2150, -80 )
script = ExtResource( 64 )
monster = "xiaomihou"

[node name="Tween" type="Tween" parent="Spawner_Snake"]

[node name="Skill" parent="." instance=ExtResource( 69 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="13311-1" type="Sprite" parent="."]
position = Vector2( 2854.69, 340.787 )
z_index = -1
texture = ExtResource( 59 )
offset = Vector2( 0, -15 )
flip_h = true

[node name="13312-1" type="Sprite" parent="."]
position = Vector2( 2393.01, 339.475 )
z_index = -1
texture = ExtResource( 63 )
offset = Vector2( 0, -15 )
flip_h = true

[node name="16898-1" type="Sprite" parent="."]
position = Vector2( 1766.73, 479.857 )
texture = ExtResource( 66 )

[node name="16898-2" type="Sprite" parent="."]
position = Vector2( 1818.32, 519.542 )
texture = ExtResource( 66 )

[node name="16899-1" type="Sprite" parent="."]
position = Vector2( 1859.6, 546.166 )
texture = ExtResource( 68 )

[node name="dengmao" parent="." instance=ExtResource( 2 )]
position = Vector2( 2170, 500 )

[connection signal="body_entered" from="climb" to="Steve" method="_on_climb_body_entered"]
[connection signal="body_exited" from="climb" to="Steve" method="_on_climb_body_exited"]
[connection signal="body_entered" from="TransPort" to="." method="_on_TransPort_body_entered"]
[connection signal="body_entered" from="TransPort2" to="." method="_on_TransPort2_body_entered"]
[connection signal="timeout" from="BattleTime" to="Steve" method="_on_BattleTime_timeout"]
[connection signal="monster_die" from="Spawner_Snake" to="Spawner_Snake" method="_on_Spawner_monster_die"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
